Fixes, cambiar polling en microservicio de gestión de peticiones y lógica de estados en el servidor de renderizado
