# servidor-renderizado/serverStatus.js
@@ -1,15 +1,27 @@
 let currentStatus;
+let latestRequest;
 let estimatedRemainingProcessingTime;
 
 // Para debugging
-setInterval(() => console.log(currentStatus.description.cyan), 5000);
+setInterval(() => console.log(currentStatus.description.cyan + " " + latestRequest.cyan), 1000);
 
 const getStatus = () => currentStatus;
 
 const setStatus = (newStatus) => (currentStatus = newStatus);
 
+const getLatestRequest= () => latestRequest;
+
+const setLatestRequest = (newRequest) => (latestRequest = newRequest);
+
 const getEstimatedRemainingProcessingTime = () => estimatedRemainingProcessingTime;
 
 const setEstimatedRemainingProcessingTime = (newEstimatedRemainingProcessingTime) => (estimatedRemainingProcessingTime = newEstimatedRemainingProcessingTime);
 
-export { getStatus, setStatus, getEstimatedRemainingProcessingTime, setEstimatedRemainingProcessingTime };
+export { 
+  getStatus, 
+  setStatus, 
+  getLatestRequest, 
+  setLatestRequest, 
+  getEstimatedRemainingProcessingTime, 
+  setEstimatedRemainingProcessingTime 
+};
